--- a/PerlDance/views/talk.html
+++ b/PerlDance/views/talk.html
@@ -1,65 +1,36 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title">Web Development using Dancer</h1>
-    <!--span class="gdlr-page-caption">Learn how to create a modern web application in just a few hours!</span-->
-  </div>  
-</div>  
-
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper">
-      <div class="with-sidebar-container container gdlr-class-no-sidebar">
-        <div class="with-sidebar-left twelve columns">
-          <div class="with-sidebar-content twelve columns">
-            <div class="gdlr-item gdlr-item-start-content">
-              <div class="session type-session status-publish has-post-thumbnail hentry session_category-the-keynote">
-                <div class="gdlr-session-info-wrapper">
-                  <div class="gdlr-speaker-thumbnail">
-                    <div class="gdlr-speaker-thumbnail-inner">
-                      <a class="speaker-photo-link" href="/speakers/"><img class="photo" src="" alt="" width="300" height="300" /></a>
-                    </div>
-                  </div>
-                  <div class="gdlr-session-info">
-                    <div class="session-info session-time">
-                      <i class="fa fa-calendar" ></i><span class="date">19 Oct 2015</span>
-                    </div>
-                    <div class="session-info session-time">
-                      <i class="fa fa-clock-o"></i><span class="duration_display">09:00 - 13:00</span>
-                    </div>
-                    <div class="session-info session-location">
-                      <i class="fa fa-location-arrow" ></i>Amerikahaus
-                    </div>
-                    <div class="session-info session-speaker">
-                      <div class="session-speaker-inner">
-                        <i class="fa fa-user" ></i>
-                      <div class="session-speaker-list">
-                        <div class="session-speaker-list-item">
-                          <a class="speaker-link" href="/speakers/">Andrew Solomon</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="clear"></div>
-                </div>
-              </div>                
-              <div class="gdlr-session-content">
-                <div class="gdlr-session-thumbnail"></div>
-                  <h4 class="gdlr-session-title">Web Development using Dancer</h4>
-                  <div class="abstract">
-                    <p>A hands-on training session to develop a website with dynamic content in Dancer.</p>
-                    <p>From doing the exercises you will learn to use the Dancer framework, learn to use Template Toolkit, understand the concept of Model-View-Controller, experience structuring code for maintainability, experience using object oriented modules. To attend this session you should have basic knowledge of Perl (but you can join if you have any programming experience), and you should be able to use Linux command line and text editor (like vi/emacs/pico).</p>
-                  </div>
-                </div>      
-                <div class="clear"></div>
-              </div>
-            </div>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div class="clear"></div>
-      </div>        
-    </div>        
+<div class="jumbotron title-wrapper">
+  <div class="container">
+   <h1 class="page-title">Talk name</h1>
   </div>
-  <div class="clear" ></div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+      <div>
+        <a class="photo-link" href="/speakers/"><img class="photo img-responsive img-rounded"></a>
+      </div>
+      <div class="text-right talk-info session-info">
+        <div>
+          <i class="fa fa-calendar" ></i> <span class="date">19 Oct 2015</span>
+        </div>
+        <div>
+          <i class="fa fa-clock-o"></i> <span class="duration_display">09:00 - 13:00</span>
+        </div>
+        <div>
+          <i class="fa fa-location-arrow"></i> <span class="location">Location</span>
+        </div>
+        <div>
+          <i class="fa fa-user" ></i> <a class="speaker-link" href="/speakers/">Andrew Solomon</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <h4 class="page-title">Web Development using Dancer</h4>
+      <div class="abstract">
+        <p>A hands-on training session to develop a website with dynamic content in Dancer.</p>
+        <p>From doing the exercises you will learn to use the Dancer framework, learn to use Template Toolkit, understand the concept of Model-View-Controller, experience structuring code for maintainability, experience using object oriented modules. To attend this session you should have basic knowledge of Perl (but you can join if you have any programming experience), and you should be able to use Linux command line and text editor (like vi/emacs/pico).</p>
+      </div>
+    </div>
+  </div>
 </div>
