make footer sticky

--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -1,53 +1,48 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title name">Andrew Solomon</h1>
-    <span class="gdlr-page-caption"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></span>
-  </div>  
-</div>  
+<div class="jumbotron title-wrapper">
+  <div class="container">
+    <h1 class="name">nav title</h1>
+    <span class="page-caption"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></span>
+  </div>
+</div>
 
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper">
-      <div class="with-sidebar-container container gdlr-class-no-sidebar">
-        <div class="with-sidebar-left twelve columns">
-          <div class="with-sidebar-content twelve columns">
-            <div class="gdlr-item gdlr-item-start-content">
-              <div class="speaker type-speaker status-publish has-post-thumbnail hentry speaker_category-the-keynote">
-                <div class="gdlr-speaker-info-wrapper">
-                  <div class="gdlr-speaker-thumbnail">
-                    <img class="photo" src="/img/people/peter-mottram.jpg" alt="" width="300" height="300">
-                  </div>                
-                  <div class="gdlr-speaker-info-inner">
-                    <h4 class="gdlr-speaker-name name">Andrew Solomon</h4>
-                    <div class="gdlr-speaker-position"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
-                  </div>                
-                </div>                
-                <div class="gdlr-speaker-content-wrapper">
-                  <h4 class="gdlr-speaker-biography-title">Biography</h4>
-                  <div class="gdlr-speaker-content">
-                    <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
-                  </div>
-                  <div class="has_talks">
-                    <h4 class="gdlr-speaker-session-title">Talks by <span class="name">Andrew Solomon</span></h4>
-                  </div>
-                  <div class="gdlr-speaker-session-wrapper">
-                    <div class="six columns">
-                      <div class="gdlr-speaker-session-item gdlr-item talks">
-                        <h4 class="speaker-session-item-title title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
-                        <div class="gdlr-session-info">
-                          <div class="session-info session-time">
-                            <i class="fa fa-clock-o" ></i><span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
-                          </div>
-                          <div class="session-info session-location">
-                            <i class="fa fa-location-arrow" ></i>Amerikahaus
-                          </div>
-                          <div class="clear"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="clear"></div>
-                  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div>
+        <img class="photo img-responsive" src="/img/people/peter-mottram.jpg">
+        <h4 class="gdlr-speaker-name name">Andrew Solomon</h4>
+        <div class="gdlr-speaker-position"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
+      </div>                
+    </div>
+    <div class="col-md-8">
+      <h4 class="gdlr-speaker-biography-title">Biography</h4>
+      <div class="gdlr-speaker-content">
+        <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
+      </div>
+      <div class="has_talks">
+        <h4 class="gdlr-speaker-session-title">Talks by <span class="name">Andrew Solomon</span></h4>
+      </div>
+      <div class="gdlr-speaker-session-wrapper">
+        <div class="six columns">
+          <div class="gdlr-speaker-session-item gdlr-item talks">
+            <h4 class="speaker-session-item-title title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
+            <div class="gdlr-session-info">
+              <div class="session-info session-time">
+                <i class="fa fa-clock-o" ></i><span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
+              </div>
+              <div class="session-info session-location">
+                <i class="fa fa-location-arrow" ></i>Amerikahaus
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
                 </div>      
                 <div class="clear"></div>
               </div>
