bs rehack of speaker page

--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -10,49 +10,31 @@
     <div class="col-md-4">
       <div>
         <img class="photo img-responsive" src="/img/people/peter-mottram.jpg">
-        <h4 class="gdlr-speaker-name name">Andrew Solomon</h4>
-        <div class="gdlr-speaker-position"><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
+        <h4>Andrew Solomon</h4>
+        <div><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
       </div>                
     </div>
     <div class="col-md-8">
-      <h4 class="gdlr-speaker-biography-title">Biography</h4>
-      <div class="gdlr-speaker-content">
+      <h4>Biography</h4>
+      <div>
         <p class="bio">Software developer and project leader with over 15 years experience. Applications include algebraic and optimisation algorithms, web services and virtual machines in Perl, Java and C within a Unix environment. Managing projects using both in-house and contract developers.</p>
       </div>
-      <div class="has_talks">
-        <h4 class="gdlr-speaker-session-title">Talks by <span class="name">Andrew Solomon</span></h4>
-      </div>
-      <div class="gdlr-speaker-session-wrapper">
-        <div class="six columns">
-          <div class="gdlr-speaker-session-item gdlr-item talks">
-            <h4 class="speaker-session-item-title title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
-            <div class="gdlr-session-info">
-              <div class="session-info session-time">
-                <i class="fa fa-clock-o" ></i><span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
-              </div>
-              <div class="session-info session-location">
-                <i class="fa fa-location-arrow" ></i>Amerikahaus
-              </div>
-              <div class="clear"></div>
+      <h4 class="has_talks">Talks by <span class="name">Andrew Solomon</span></h4>
+      <div class="panel panel-primary talks">
+        <div class="panel-heading">
+          <h4 class="panel-title"><a class="talk-link" href="/talks/">Web Development using Dancer</a></h4>
+        </div>
+        <div class="panel-body">
+          <div class="session-info">
+            <div>
+              <i class="fa fa-clock-o" ></i> <span class="start_time"></span> <span class="duration_display">09:00 - 13:00</span>
+            </div>
+            <div>
+              <i class="fa fa-location-arrow"></i> <span class="location">Location</span>
             </div>
           </div>
         </div>
-        <div class="clear"></div>
       </div>
     </div>
   </div>
-</div>
-
-                </div>      
-                <div class="clear"></div>
-              </div>
-            </div>
-          </div>
-          <div class="clear"></div>
-        </div>
-        <div class="clear"></div>
-      </div>        
-    </div>        
-  </div>
-  <div class="clear" ></div>
 </div>
