--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -169,6 +169,10 @@ h4.subscribe {
   text-transform: uppercase;
   font-style: normal;
 }
+/* speaker */
+.panel-body .session-info {
+  padding: 0 0;
+}
 /* misc */
 .panel-primary {
   border-color: #0069af
