--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -5,23 +5,17 @@
   </div>
 
   <div class="container">
-    <div class="center-block countdown-timer"><!-- countdown timer --></div>
+    <div class="text-center countdown-timer"><!-- countdown timer --></div>
     <div class="center-block">
       <h4 class="text-center subscribe">Subscribe for updates</h4>
       <form class="text-center form-inline" id="newsletter-subscribe" method="post" action="/subscribe">
         <div class="form-group">
-          <input class="newsletter-email form-control" type="email" name="ne" size="30" required placeholder="Please fill your email">
+          <input class="newsletter-email form-control" type="email" name="ne" size="30" required placeholder="Please enter your email address">
           <input class="newsletter-submit btn btn-primary" type="submit" value="Subscribe">
         </div>
       </form>
     </div>
   </div>
-
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="clear"></div>
 
   <div class="container">
     <h3 class="">Speakers</h3>
