--- a/PerlDance/views/speaker.html
+++ b/PerlDance/views/speaker.html
@@ -10,7 +10,7 @@
     <div class="col-md-4">
       <div>
         <img class="photo img-responsive" src="/img/people/peter-mottram.jpg">
-        <h4>Andrew Solomon</h4>
+        <h4 class="name">speaker name</h4>
         <div><span class="company">Booking.com</span>, <span class="city">Amsterdam</span>, <span class="country">Netherlands</span></div>
       </div>                
     </div>
