--- a/PerlDance/views/tickets.html
+++ b/PerlDance/views/tickets.html
@@ -27,8 +27,8 @@
               </div>
             </div>
             <div class="clear"></div>
-            <div class="gdlr-session-counter-item gdlr-item">
-              <!--countdown fragment-->
+            <div class="text-center countdown-timer">
+              <!-- countdown timer -->
             </div>
           </div>
           <div class="clear"></div>
