--- a/PerlDance/views/fragments/countdown.html
+++ b/PerlDance/views/fragments/countdown.html
@@ -1,17 +1,16 @@
-<div class="session-counter-block gdlr-block-day">
+<div class="session-counter-block block-day">
   <span class="gdlr-time gdlr-day"></span>
   <span class="gdlr-unit">Days</span>
 </div>
-<div class="session-counter-block gdlr-block-hrs">
+<div class="session-counter-block block-hrs">
   <span class="gdlr-time gdlr-hrs"></span>
   <span class="gdlr-unit">Hours</span>
 </div>
-<div class="session-counter-block gdlr-block-min">
+<div class="session-counter-block block-min">
   <span class="gdlr-time gdlr-min"></span>
   <span class="gdlr-unit">Mins</span>
 </div>
-<div class="session-counter-block gdlr-block-sec">
+<div class="session-counter-block block-sec">
   <span class="gdlr-time gdlr-sec"></span>
   <span class="gdlr-unit">Secs</span>
 </div>
-<div class="clear"></div>
