--- a/PerlDance/views/tickets.xml
+++ b/PerlDance/views/tickets.xml
@@ -1,4 +1,4 @@
 <specification>
   <value name="ticket-item-wrapper" op="hook" include="fragments/tickets.html"/>
-  <value name="gdlr-session-counter-item" op="hook" include="fragments/countdown.html"/>
+  <value name="countdown-timer" op="hook" include="fragments/countdown.html"/>
 </specification>
