--- a/PerlDance/views/404.html
+++ b/PerlDance/views/404.html
@@ -1,34 +1,27 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-normal"  data-bgspeed="0.5" >
-	<div class="gdlr-page-title-overlay"></div>
-	<div class="gdlr-page-title-container container" >
-		<h1 class="gdlr-page-title">Not Found</h1>
-	</div>	
-</div>	
+<div class="jumbotron title-wrapper">
+  <div class="container">
+    <h1 class="page-title">404</h1>
+    <span class="page-caption">Not Found</span>
+  </div>
+</div>
 
-<div class="content-wrapper">
-	<div class="page-not-found-container container">
-		<div class="gdlr-item page-not-found-item">
-			<div class="page-not-found-block" >
-				<div class="page-not-found-icon">
-					<i class="fa fa-frown-o"></i>
-				</div>
-				<div class="page-not-found-title">Error 404</div>
-				<div class="page-not-found-caption">
-          Sorry, we couldn't find the page you're looking for.
-        </div>
-				<div class="page-not-found-search">
-					<div class="gdl-search-form">
-	          <form method="get" id="searchform" action="http://perl.dance/">
-				      <div class="search-text" id="search-text">
-			          <input type="text" name="s" id="s" autocomplete="off" data-default="Type keywords..." />
-		          </div>
-		          <input type="submit" id="searchsubmit" value="" />
-		          <div class="clear"></div>
-	          </form>
+<div class="container">
+  <div class="page-not-found-block" >
+    <div class="page-not-found-icon"><i class="fa fa-frown-o"></i></div>
+    <div class="page-not-found-title">Error 404</div>
+    <div class="page-not-found-caption">
+      Sorry, we couldn't find the page you're looking for.
+    </div>
+    <!--div class="page-not-found-search">
+      <div class="gdl-search-form">
+        <form method="get" id="searchform" action="http://perl.dance/">
+          <div class="search-text" id="search-text">
+            <input type="text" name="s" id="s" autocomplete="off" data-default="Type keywords..." />
           </div>
-        </div>
-		  </div>
-		</div>
-	</div>
-  <div class="clear" ></div>
+          <input type="submit" id="searchsubmit" value="" />
+          <div class="clear"></div>
+        </form>
+      </div>
+    </div-->
+  </div>
 </div>
