--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top normal">
+    <div class="navbar navbar-default navbar-fixed-top normal" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -45,11 +45,12 @@
             <li class="menu-main"><a class="link" href="/">Home</a></li>
             <li class="menu-main"><a class="link" href="/">About</a></li>
             <li class="menu-main"><a class="link" href="/">Contact</a></li>
+            <li class="menu-login"><a class="link" href="/">Login</a></li>
             <li class="menu-logout"><a class="link" href="/">Logout</a></li>
           </ul>
         </div>
       </div>
-    </nav>
+    </div>
 
     <div class="content"></div>
     
