--- a/PerlDance/views/talk.html
+++ b/PerlDance/views/talk.html
@@ -28,8 +28,7 @@
     <div class="col-sm-9">
       <h4 class="page-title">Web Development using Dancer</h4>
       <div class="abstract">
-        <p>A hands-on training session to develop a website with dynamic content in Dancer.</p>
-        <p>From doing the exercises you will learn to use the Dancer framework, learn to use Template Toolkit, understand the concept of Model-View-Controller, experience structuring code for maintainability, experience using object oriented modules. To attend this session you should have basic knowledge of Perl (but you can join if you have any programming experience), and you should be able to use Linux command line and text editor (like vi/emacs/pico).</p>
+        Abstract appears here.
       </div>
     </div>
   </div>
