start on bootstrap rehack of tickets

--- a/PerlDance/views/tickets.html
+++ b/PerlDance/views/tickets.html
@@ -1,10 +1,9 @@
-<div class="gdlr-page-title-wrapper gdlr-parallax-wrapper gdlr-title-large-center"  data-bgspeed="0.5" >
-  <div class="gdlr-page-title-overlay"></div>
-  <div class="gdlr-page-title-container container" >
-    <h1 class="gdlr-page-title">Tickets</h1>
-    <span class="gdlr-page-caption">Get Your Seat Before It's Too Late</span>
-  </div>  
-</div>  
+<div class="jumbotron title-wrapper">
+  <div class="container">
+    <h1 class="page-title">nav title</h1>
+    <span class="page-caption">nav description</span>
+  </div>
+</div>
 
 <div class="content-wrapper">
   <div class="gdlr-content">
