main tickets view complete but tickets fragment still not done

--- a/PerlDance/views/tickets.html
+++ b/PerlDance/views/tickets.html
@@ -5,94 +5,32 @@
   </div>
 </div>
 
-<div class="content-wrapper">
-  <div class="gdlr-content">
-    <div class="with-sidebar-wrapper gdlr-type-no-sidebar">
-      <section id="content-section-1" >
-        <div class="color-wrapper-tickets gdlr-color-wrapper  gdlr-show-all no-skin">
-          <div class="container">
-            <div class="ticket-item-wrapper"  >
-              <!-- tickets fragment -->
-            </div>
-            <div class="clear"></div>
-            <div class="gdlr-title-item">
-              <div class="gdlr-item-title-wrapper gdlr-item pos-center ">
-                <div class="gdlr-item-title-head">
-                  <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">Hurry Up!</h3>
-                  <div class="clear"></div>
-                </div>
-                <div class="gdlr-item-title-divider"></div>
-                <div class="gdlr-item-title-caption gdlr-skin-info">We have only 60 seats available!</div>
-              </div>
-            </div>
-            <div class="clear"></div>
-            <div class="text-center countdown-timer">
-              <!-- countdown timer -->
-            </div>
-          </div>
-          <div class="clear"></div>
-          <div class="gdlr-item-title-wrapper gdlr-item pos-center">
-            <div class="gdlr-item-title-head">
-              <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-medium">What people say about our conference</h3>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <div class="gdlr-testimonial-item-wrapper">
-            <div class="clear"></div>
-            <div class="four columns">
-              <div class="gdlr-item gdlr-testimonial-item plain-style">
-                <div class="gdlr-ux gdlr-testimonial-ux">
-                  <div class="testimonial-item">
-                    <div class="testimonial-content gdlr-skin-content">
-                      <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
-                    </div>
-                    <div class="testimonial-info">
-                      <span class="testimonial-author gdlr-skin-link-color">Bill Carr</span>
-                      <span class="testimonial-position gdlr-skin-info"><span>, </span>Bottlenose, CEO</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="four columns">
-              <div class="gdlr-item gdlr-testimonial-item plain-style">
-                <div class="gdlr-ux gdlr-testimonial-ux">
-                  <div class="testimonial-item">
-                    <div class="testimonial-content gdlr-skin-content">
-                      <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
-                      </div>
-                      <div class="testimonial-info">
-                        <span class="testimonial-author gdlr-skin-link-color">Jure Kodzoman</span>
-                        <span class="testimonial-position gdlr-skin-info"><span>, </span>Informa Studio</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="four columns">
-                <div class="gdlr-item gdlr-testimonial-item plain-style">
-                  <div class="gdlr-ux gdlr-testimonial-ux">
-                    <div class="testimonial-item">
-                      <div class="testimonial-content gdlr-skin-content">
-                        <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
-                      </div>
-                      <div class="testimonial-info">
-                        <span class="testimonial-author gdlr-skin-link-color">Sam Batschelet</span>
-                        <span class="testimonial-position gdlr-skin-info"><span>, </span>WBA, NY, USA</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="clear"></div>
-            </div>
-            <div class="clear"></div>
-            <div class="clear"></div>
-          </div>
-        </div>
-        <div class="clear"></div>
-      </section>
+<div class="container">
+  <div class="ticket-wrapper"><!-- tickets fragment --></div>
+  <div class="text-center">
+    <h2>Hurry up!</h2>
+    <p>We have only 60 seats available!</p>
+    <div class="countdown-timer"><!-- countdown timer --></div>
+    <h2>What people say about our conference</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <blockquote>
+          <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
+          <footer>Bill Carr <cite>CEO, Bottlenose</cite></footer>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote>
+          <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
+          <footer>Jure Kodzoma <cite>Informa Studio</cite></footer>
+        </blockquote>
+      </div>
+      <div class="col-md-4">
+        <blockquote>
+          <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
+          <footer>Sam Batschelet <cite>WBA, NY, USA</cite></footer>
+        </blockquote>
+      </div>
     </div>
   </div>
-  <div class="clear" ></div>
 </div>
