initial tickets fragment with no styling

--- a/PerlDance/views/tickets.html
+++ b/PerlDance/views/tickets.html
@@ -5,32 +5,31 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="ticket-wrapper"><!-- tickets fragment --></div>
-  <div class="text-center">
-    <h2>Hurry up!</h2>
-    <p>We have only 60 seats available!</p>
-    <div class="countdown-timer"><!-- countdown timer --></div>
-    <h2>What people say about our conference</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <blockquote>
-          <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
-          <footer>Bill Carr <cite>CEO, Bottlenose</cite></footer>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
-          <footer>Jure Kodzoma <cite>Informa Studio</cite></footer>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
-          <footer>Sam Batschelet <cite>WBA, NY, USA</cite></footer>
-        </blockquote>
-      </div>
+<div class="ticket-wrapper"><!-- tickets fragment --></div>
+
+<div class="container text-center">
+  <h2>Hurry up!</h2>
+  <p>We have only 60 seats available!</p>
+  <div class="countdown-timer"><!-- countdown timer --></div>
+  <h2>What people say about our conference</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <blockquote>
+        <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
+        <footer>Bill Carr <cite>CEO, Bottlenose</cite></footer>
+      </blockquote>
+    </div>
+    <div class="col-md-4">
+      <blockquote>
+        <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
+        <footer>Jure Kodzoma <cite>Informa Studio</cite></footer>
+      </blockquote>
+    </div>
+    <div class="col-md-4">
+      <blockquote>
+        <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
+        <footer>Sam Batschelet <cite>WBA, NY, USA</cite></footer>
+      </blockquote>
     </div>
   </div>
 </div>
