--- a/PerlDance/views/fragments/tickets.html
+++ b/PerlDance/views/fragments/tickets.html
@@ -1,157 +1,13 @@
-<div class="ticket-item-holder">
-  <div class="clear"></div>
-  <div class="six columns">
-    <div class="gdlr-item gdlr-ticket-item">
-      <div class="gdlr-ticket-head">
-        <div class="gdlr-ticket-head-title">Conference only</div>
-        <div class="gdlr-ticket-head-price">159.00 EUR</div>
-      </div>
-      <div class="gdlr-ticket-content gdlr-info-font">
-        <p>Valid for 2 conference days</p>
-        <p>21 and 22 of October</p>
-        <p>Entrance to all talks</p>
-        <p>Includes social event</p>
-        <p>Includes free T-Shirt</p>
-      </div>
-      <div class="gdlr-lightbox-form" id="gdlr-form-1" >
-        <div class="gdlr-paypal-form-wrapper">
-          <h3 class="gdlr-paypal-form-head">You are booking for : <span>Conference only</span></h3>
-          <form class="gdlr-paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" data-ajax="http://perl.dance/wp-admin/admin-ajax.php" >
-            <div class="gdlr-paypal-fields">
-              <div class="six columns">
-                <span class="gdlr-head">Name *</span>
-                <input class="gdlr-require" type="text" name="gdlr-name">
-              </div>
-              <div class="six columns gdlr-right">
-                <span class="gdlr-head">Last Name *</span>
-                <input class="gdlr-require" type="text" name="gdlr-last-name">
-              </div>
-              <div class="clear"></div>
-              <div class="six columns">
-                <span class="gdlr-head">Email *</span>
-                <input class="gdlr-require gdlr-email" type="text" name="gdlr-email">
-              </div>
-              <div class="six columns gdlr-right">
-                <span class="gdlr-head">Phone</span>
-                <input type="text" name="gdlr-phone">
-              </div>
-              <div class="clear"></div>
-              <div class="six columns"><span class="gdlr-head">Address</span>
-                <textarea name="gdlr-address"></textarea>
-              </div>
-              <div class="six columns gdlr-right"><span class="gdlr-head">Additional Note</span>
-                <textarea name="gdlr-additional-note"></textarea>
-              </div>    
-              <div class="clear"></div>
-            </div>
-            <input type="hidden" name="cmd" value="_xclick">
-            <input type="hidden" name="business" value="jure.kodzoman@informastudio.com">
-            <input type="hidden" name="item_name" value="Conference only">
-            <input type="hidden" name="ticket_id" value="3282">
-            <input type="hidden" name="invoice" value="">
-            <input type="hidden" name="amount" value="">    
-            <input type="hidden" name="return" value="http://perl.dance/?ticket=one-day-pass">
-            <input type="hidden" name="no_shipping" value="0">
-            <input type="hidden" name="no_note" value="1">
-            <input type="hidden" name="currency_code" value="EUR">
-            <input type="hidden" name="lc" value="AU">
-            <input type="hidden" name="bn" value="PP-BuyNowBF">
-            <input type="hidden" class="gdlr-paypal-action" name="action" value="">
-            <input type="hidden" name="security" value="66bccbcf68">
-            <div class="gdlr-notice email-invalid" >Invalid Email Address </div>
-            <div class="gdlr-notice require-field" >Please fill all required fields</div>
-            <div class="gdlr-notice alert-message" ></div>
-            <div class="gdlr-paypal-loader" ></div>
-            
-            <input type="button" class="gdlr-button-mail gdlr-button with-border" value="Book By E-Mail And We Will Contact You Back" >
-            <div class="gdlr-paypal-or">
-              <span class="gdlr-or-text">OR</span>
-            </div>
-            <input type="button" class="gdlr-button-paypal gdlr-button with-border" value="Check Out Via PayPal" >
-            <div class="clear"></div>
-          </form>
-        </div>
-      </div>
-      <a class="gdlr-ticket-button" href="#gdlr-form-1" data-rel="fancybox" data-fancybox-type="inline" >Book Now</a>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 tickets">
+      <div class="name">Ticket name</div>
+      <div class="price">0.00</div>
+      <div class="description">Ticket description</div>
+      <form action="/cart" method="post">
+        <input type="hidden" class="sku" name="sku">
+        <button class="btn btn-success">Book Now</button>
+      </form>
     </div>
   </div>
-  <div class="six columns">
-    <div class="gdlr-item gdlr-ticket-item">
-      <div class="gdlr-ticket-head">
-        <div class="gdlr-ticket-head-title">Conference + Training</div>
-        <div class="gdlr-ticket-head-price">249.00 EUR</div>
-        <div class="gdlr-ticket-head-featured gdlr-info-font">Featured!</div>
-      </div>
-      <div class="gdlr-ticket-content gdlr-info-font">
-        <p>Four Day Full Access</p>
-        <p>Includes all training sessions</p>
-        <p>Includes all conference days</p>
-        <p>Includes social event</p>
-        <p>Includes free T-Shirt</p>
-      </div>
-      <div class="gdlr-lightbox-form" id="gdlr-form-2" >
-        <div class="gdlr-paypal-form-wrapper">
-          <h3 class="gdlr-paypal-form-head">You are booking for : <span>Conference + Training</span></h3>
-          <form class="gdlr-paypal-form" action="https://www.paypal.com/cgi-bin/webscr" method="post" data-ajax="http://perl.dance/wp-admin/admin-ajax.php" >
-            <div class="gdlr-paypal-fields">
-              <div class="six columns">
-                <span class="gdlr-head">Name *</span>
-                <input class="gdlr-require" type="text" name="gdlr-name">
-              </div>
-              <div class="six columns gdlr-right">
-                <span class="gdlr-head">Last Name *</span>
-                <input class="gdlr-require" type="text" name="gdlr-last-name">
-              </div>
-              <div class="clear"></div>
-              <div class="six columns">
-                <span class="gdlr-head">Email *</span>
-                <input class="gdlr-require gdlr-email" type="text" name="gdlr-email">
-              </div>
-              <div class="six columns gdlr-right">
-                <span class="gdlr-head">Phone</span>
-                <input type="text" name="gdlr-phone">
-              </div>    
-              <div class="clear"></div>
-              <div class="six columns">
-                <span class="gdlr-head">Address</span>
-                <textarea name="gdlr-address"></textarea>
-              </div>
-              <div class="six columns gdlr-right">
-                <span class="gdlr-head">Additional Note</span>
-                <textarea name="gdlr-additional-note"></textarea>
-              </div>    
-              <div class="clear"></div>
-            </div>
-            <input type="hidden" name="cmd" value="_xclick">
-            <input type="hidden" name="business" value="jure.kodzoman@informastudio.com">
-            <input type="hidden" name="item_name" value="Conference + Training">
-            <input type="hidden" name="ticket_id" value="3281">
-            <input type="hidden" name="invoice" value="">
-            <input type="hidden" name="amount" value="">    
-            <input type="hidden" name="return" value="http://perl.dance/?ticket=four-day-passes">
-            <input type="hidden" name="no_shipping" value="0">
-            <input type="hidden" name="no_note" value="1">
-            <input type="hidden" name="currency_code" value="EUR">
-            <input type="hidden" name="lc" value="AU">
-            <input type="hidden" name="bn" value="PP-BuyNowBF">
-            <input type="hidden" class="gdlr-paypal-action" name="action" value="">
-            <input type="hidden" name="security" value="66bccbcf68">
-            <div class="gdlr-notice email-invalid" >Invalid Email Address </div>
-            <div class="gdlr-notice require-field" >Please fill all required fields</div>
-            <div class="gdlr-notice alert-message" ></div>
-            <div class="gdlr-paypal-loader" ></div>
-            
-            <input type="button" class="gdlr-button-mail gdlr-button with-border" value="Book By E-Mail And We Will Contact You Back" >
-            <div class="gdlr-paypal-or">
-              <span class="gdlr-or-text">OR</span>
-            </div>
-            <input type="button" class="gdlr-button-paypal gdlr-button with-border" value="Check Out Via PayPal" >
-            <div class="clear"></div>
-          </form>
-        </div>
-      </div>
-      <a class="gdlr-ticket-button" href="#gdlr-form-2" data-rel="fancybox" data-fancybox-type="inline" >Book Now</a>
-    </div>
-  </div>
-  <div class="clear"></div>
 </div>
