--- a/PerlDance/public/css/site.css
+++ b/PerlDance/public/css/site.css
@@ -248,3 +248,33 @@ h4.subscribe {
   font-size: 20px;
   margin-bottom: 35px;
 }
+/* tickets */
+.tickets-container {
+  margin: 0 15px 20px;
+}
+.ticket-header {
+  background-color: #e9e9e9;
+  padding: 32px 20px 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.ticket-header .name {
+  font-size: 19px;
+  margin-bottom: 10px;
+}
+.ticket-header .price {
+  color: #0045bc;
+  font-size: 16px;
+}
+.ticket-content {
+  color: #8b8b8b;
+  background-color: #f9f9f9;
+  padding: 35px 20px 25px;
+  font-family: "Droid Serif";
+}
+.tickets-container .btn {
+  width: 100%;
+  font-weight: bold;
+  padding: 15px 0;
+  text-transform: uppercase;
+}
