tickets display fixes

--- a/PerlDance/views/index.html
+++ b/PerlDance/views/index.html
@@ -38,8 +38,8 @@
 
   <div class="container">
     <h3>Register Now!</h3>
-    <div>Hurry up! Early bird tickets are on sale only until July 15th</div>
+    <!--div>Hurry up! Early bird tickets are on sale only until July 15th</div-->
   </div>
 
-  <div class="ticket-item-wrapper"  ><!-- tickets fragment --></div>
+  <div class="ticket-wrapper"><!-- tickets fragment --></div>
 </div>
