update copyright message in footer

--- a/PerlDance/views/layouts/main.html
+++ b/PerlDance/views/layouts/main.html
@@ -57,7 +57,7 @@
     <div class="footer">
       <div class="copyright-container container">
         <div class="copyright-left">
-            © Copyright Informa Studio Ltd. and Interchange Development Group, All Right Reserved
+            © Copyright 2015 Interchange Development Group, All Right Reserved
         </div>
       </div>
     </div>
