start on cart views

--- a/PerlDance/views/fragments/tickets.html
+++ b/PerlDance/views/fragments/tickets.html
@@ -2,7 +2,7 @@
   <div class="row text-center tickets-container">
     <div class="col-sm-6 tickets">
       <div class="ticket-header">
-        <div class="name">Ticket name</div>
+        <div class="short_description">Ticket name</div>
         <div class="price">0.00</div>
       </div>
       <div class="description ticket-content">Ticket description</div>
