--- a/PerlDance/views/cart.html
+++ b/PerlDance/views/cart.html
@@ -2,32 +2,8 @@
   <h1>Your shopping cart</h1>
   <div class="row">
     <div class="col-md-9">
-      <table class="table table-bordered table-hover">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Unit Price</th>
-            <th>Qty</th>
-            <th>Price</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="product">
-            <td><!--img--></td>
-            <td><a class="name">Product name</a></td>
-            <td><div class="selling_price">0.00</div></td>
-            <td><div class="quantity">0</div></td>
-            <td><div class="subtotal">0.00</div></td>
-          </tr>
-          <tr>
-            <td colspan="2"></td>
-            <td class="text-right">
-              <p>Subtotal: <span class="cart_subtotal">0.00</span></p>
-              <p>TOTAL: <span class="cart_total">0.00</span></p>
-            </td>
-        </tbody>
-      </table>
+      <div class="table-responsive cart-container">
+      </div>
     </div>
   </div>
 </div>
