--- a/PerlDance/views/cart.xml
+++ b/PerlDance/views/cart.xml
@@ -1,8 +1,3 @@
 <specification>
-  <list name="products" iterator="cart" class="product">
-    <param name="name"/>
-    <param name="selling_price" filter="currency"/>
-    <param name="quantity"/>
-    <param name="subtotal" filter="currency"/>
-  </list>
+  <value name="cart-container" op="hook" include="fragments/cart.html"/>
 </specification>
