more work on cart update handling

--- a/PerlDance/views/fragments/cart.html
+++ b/PerlDance/views/fragments/cart.html
@@ -20,10 +20,10 @@
       <td><select name="quantity" class="form-control quantity">0</select></td>
       <td><div class="subtotal">0.00</div></td>
     </tr>
-    <tr>
+    <!-- not needed for ticket only tr>
       <td colspan="4" class="text-right">Subtotal:</td>
       <td class="cart_subtotal">0.00</td>
-    </tr>
+    </tr-->
     <tr>
       <td colspan="4" class="text-right">TOTAL:</td>
       <td class="cart_total">0.00</td>
