finish cart qty update work

--- a/PerlDance/views/fragments/cart.html
+++ b/PerlDance/views/fragments/cart.html
@@ -17,7 +17,17 @@
         <div><a class="remove-sku" href="/cart?remove=SKU">Delete</a></div>
       </td>
       <td><div class="selling_price">0.00</div></td>
-      <td><select name="quantity" class="form-control quantity">0</select></td>
+      <td>
+        <div class="quantity-select hide">
+          <select class="form-control quantity">0</select>
+        </div>
+        <div class="quantity-input hide">
+          <input class="form-control quantity" type="text" size="3">
+          <div class="quantity-update spacing-top-small hide">
+            <button class="quantity-update-button btn btn-small btn-primary">Update</button>
+          </div>
+        </div>
+      </td>
       <td><div class="subtotal">0.00</div></td>
     </tr>
     <!-- not needed for ticket only tr>
