add basic product flypage

--- a/PerlDance/views/fragments/cart.html
+++ b/PerlDance/views/fragments/cart.html
@@ -13,7 +13,7 @@
       <td><!--img--></td>
       <td>
         <input type="hidden" class="sku" value="SKU">
-        <a class="name text-uppercase">Product name</a>
+        <a class="name text-uppercase" href="/">Product name</a>
         <div><a class="remove-sku" href="/cart?remove=SKU">Delete</a></div>
       </td>
       <td><div class="selling_price">0.00</div></td>
